# -

./: .gitignore  README.md  check_completeness.sh
code/: LICENSE  README.md  calculate_results.py
code/src/quadrotor_df/: CMakeLists.txt  package.xml
code/src/quadrotor_df/src/: df_quaternion_node.cpp
code/src/trajectory_generator/: CMakeLists.txt  package.xml
documents/: tracking.csv
solutions/: df_quaternion.csv  end_effector_quaternion.csv  grid10_gen.py  grid11_gen.py  grid12_gen.py  grid13_gen.py  grid14_gen.py  grid1_gen.py  grid3_gen.py  grid4_gen.py  grid5_gen.py  grid6_gen.py  grid7_gen.py  grid8_gen.py  grid9_gen.py  report.md  result.txt  run_variants.sh  run_variants_list.sh  variant_override.txt
solutions/variants/: grid10_list.txt  grid11_list.txt  grid12_list.txt  grid13_list.txt  grid14_list.txt  grid1_list.txt  grid2_list.txt  grid3_list.txt  grid4_list.txt  grid5_list.txt  grid6_list.txt  grid7_list.txt  grid8_list.txt  grid9_list.txt  summary.txt  summary_grid1.txt  summary_grid10.txt  summary_grid11.txt  summary_grid12.txt  summary_grid13.txt  summary_grid2.txt  summary_grid3.txt  summary_grid4.txt  summary_grid5.txt  summary_grid6.txt  summary_grid7.txt  summary_grid8.txt  summary_grid9.txt
solutions/variants/variant_AA_ara_fast1/: variant_override.txt
solutions/variants/variant_AB_ara_fast2/: variant_override.txt
solutions/variants/variant_AC_ara_fast3/: variant_override.txt
solutions/variants/variant_AD_ara_safe1/: control_data.txt  control_timedata.txt  result.txt  variant_override.txt
(+835 files in other folders)
