<?xml version="1.0"?>
<package format="2">
  <name>quadrotor_df</name>
  <version>0.0.0</version>
  <description>Generate differential flatness quaternions.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
